# ABACBS_2024_hackathon_agentic_wf

./: .gitignore  GEO_Parser_FJR.py  GSE199750_family.soft  LICENSE  README.md  geo_parse_shian_su.ipynb  pyproject.toml  pyrightconfig.json
snippets/: README.md
src/: basic_test.py  getGEO.py  single.py  snowball_chain.py
